force-app/main/default/objects/Monthly_Participation__c/Monthly_Participation__c.object-meta.xml
<CustomObject>
    <label>Monthly Participation</label>
    <nameField>
        <displayFormat>MP-{00000000}</displayFormat>
        <label>Monthly Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Participation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>