force-app/main/default/objects/Monthly_Participation__c/fields/Journey__c.field-meta.xml
<CustomField>
    <fullName>Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journey</label>
    <referenceTo>Journey__c</referenceTo>
    <relationshipLabel>Monthly Participation</relationshipLabel>
    <relationshipName>Monthly_Participation</relationshipName>
    <type>Lookup</type>
</CustomField>