force-app/main/default/objects/Monthly_Participation__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <externalId>true</externalId>
    <label>Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>