force-app/main/default/objects/Monthly_Participation__c/fields/Number_of_Memberships__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Memberships__c</fullName>
    <label>Number of Memberships</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>